Added art gallery for Temuge Otchigin

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1663,6 +1663,8 @@
           <p>家族：</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Тэмүгэ Отчигин</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠲᠡᠮᠦᠭᠡ<br>ᠣᠲᠣᠴᠢᠭᠢᠨ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Temuge_Otchigin.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- トッゴントモル（Toggontomor） -->
         <section>
