Added art gallery for Toggontomor

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1707,6 +1707,8 @@
           <p>家族：</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Тоггонтомор</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠲᠣᠭᠣᠭᠣᠨᠲᠣᠮᠣᠷ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Toggontomor.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
       </article>
       <!-- 赤原館（Red Meadow Mansion｜Casă Frumoasă Roșu-Livadă） -->
