Added art gallery for Ragiähl Åborg

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1764,6 +1764,8 @@
           </p>
           <p>※代名詞は「おいら」である。</p>
           <br>
+          <a href="./gallery/spalmea/Ragiähl_Åborg.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- パンドーラ・アンドレアドプールー（Pandora Andreadopoulou） -->
         <section>
