--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1805,6 +1805,8 @@
           <p>家族：</p>
           <p>※ギリシャ文字に「<span lang="el" class="font-greek">Πανδώρα Ἀνδρεαδοπούλου</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Pandṓra Andreadopoúlou</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Pandora_Andreadopoulou.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- アルキビアデス・ホントープーロス（Alkibiades Chontopoulos） -->
         <section>
