Added art gallery for Alkibiades Chontopoulos

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1845,6 +1845,8 @@
           <p>家族：</p>
           <p>※ギリシャ文字に「<span lang="el" class="font-greek">Ἀλκιβιάδης Χοντωπούλος</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Alkibiádēs Khontōpoúlos</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Alkibiades_Chontopoulos.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- ラウレンティア・ドラクルミル（Laurentia Drăculmir） -->
         <section>
