Added art gallery for Laurentia Drăculmir

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1888,6 +1888,8 @@
           <p>どうして妹は姉よりいつもパワフルなのか？！とある吸血鬼は彼女の５００歳の姉よりも強力であるよ。とある覚は彼女の姉よりも強力であるよ。彼女の姉は何でも、全てに忙しすぎている為、ラウレンティアはよく２匹の猫と遊ぶ。彼女の猫達、リーゼロッテとリーゼアリアはいつも彼女に何かする事を与えてくれた。猫達はいつも家にいるわけでないが、彼女はまだ遊び仲間として持っている誰かを見つける。誰も彼女と遊びたがっていない場合は、ラウレンティアはしばしば自分の寝屋にいて泣いている。</p>
           <p>※代名詞は「あたい」である。</p>
           <br>
+          <a href="./gallery/spalmea/Laurentia_Drăculmir.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- リリアン・ドラクルミル（Lilian Drăculmir） -->
         <section>
