Added art gallery for Lilian Drăculmir

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1935,6 +1935,8 @@
             赤血「ヴラド・ツェペシュの不滅の軍事」
           </p>
           <br>
+          <a href="./gallery/spalmea/Lilian_Drăculmir.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- レッティー・エガートン（Lettie Egerton） -->
         <section>
