Added art gallery for Lettie Egerton

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1974,6 +1974,8 @@
           </p>
           <p>家族：</p>
           <br>
+          <a href="./gallery/spalmea/Lettie_Egerton.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- リーゼアリア・フリューゲル（Liesearia Flügel） -->
         <section>
