Added art gallery for Liesearia Flügel

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2016,6 +2016,8 @@
           <p>リーゼロッテの双子の姉である。ラウレンティアの猫である。</p>
           <p>※代名詞は「あたし」である。</p>
           <br>
+          <a href="./gallery/spalmea/Liesearia_Flügel.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- リーゼロッテ・フリューゲル（Lieselotte Flügel） -->
         <section>
