Fixed ref sheet pointer

--- a/html/gallery/spalmea/Liesearia_Flügel.html
+++ b/html/gallery/spalmea/Liesearia_Flügel.html
@@ -47,7 +47,7 @@
         <h2 class="art-heading">レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【レファレンス】">
           <div class="art-ref" id="リーゼアリア・フリューゲルのレファレンス">
-            <img class="reference-art" src="../../../img/ref/Liesearia_Flügel.png" alt="リーゼアリア・フリューゲルのレファレンス">
+            <img class="reference-art" src="../../../img/ref/LieseariaFlügel.png" alt="リーゼアリア・フリューゲルのレファレンス">
           </div>
         </div>
       </section>
