Added art gallery for Lieselotte Flügel

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2058,6 +2058,8 @@
           <p>リーゼアリアの双子の妹である。ラウレンティアの猫である。</p>
           <p>※代名詞は「あたい」である。</p>
           <br>
+          <a href="./gallery/spalmea/Lieselotte_Flügel.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- クセニア・ガラネア（Xenia Galanea） -->
         <section>
