Added art gallery for Xenia Galanea

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2098,6 +2098,8 @@
           <p>家族：</p>
           <p>※ギリシャ文字に「<span lang="el" class="font-greek">Ξενία Γαλάνεα</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Xenía Galánea</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Xenia_Galanea.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- エンマヌエラ・ハディーゼー（Emmanouella Hadjitze） -->
         <section>
