--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2138,6 +2138,8 @@
           <p>家族：</p>
           <p>※ギリシャ文字に「<span lang="el" class="font-greek">Ἐμμανουέλλα Ἅδιτζη</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Emmanouélla Háditzē</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Emmanouella_Hadjitze.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- アガテー＝イリアナ・ホーンドレア（Agatha-Iliana Hondrea） -->
         <section>
