--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2178,6 +2178,8 @@
           <p>家族：</p>
           <p>※ギリシャ文字に「<span lang="el" class="font-greek">Ἀγαθή-Ἰλιάνα Ὡνδρέα</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Agathḗ-Iliána Hōndréa</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Agatha-Iliana_Hondrea.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- フリーデグント・ケーストラー（Friedegund Köstler） -->
         <section>
