Added art gallery for Friedegund Köstler

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2217,6 +2217,8 @@
           </p>
           <p>家族：</p>
           <br>
+          <a href="./gallery/spalmea/Friedegund_Köstler.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- セラフィム・ラスカロープロス（Serapheim Laskaropoulos） -->
         <section>
