Added art gallery for Serapheim Laskaropoulos

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2257,6 +2257,8 @@
           <p>家族：</p>
           <p>※ギリシャ文字に「<span lang="el" class="font-greek">Σεραφείμ Λασαρῶπουλος</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Serapheím Lasarō̂poulos</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Serapheim_Laskaropoulos.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- 宛詠蔭瑛夢（Youmu On'yomuin） -->
         <section>
