--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2315,6 +2315,8 @@
           </p>
           <p>※代名詞は「<ruby>己<rt>おのれ</rt></ruby>」である。</p>
           <br>
+          <a href="./gallery/spalmea/Youmu_On'yomuin.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- 仙坊橋魅夜（Miiya Senbouhashi） -->
         <section>
