Added art gallery for Miiya Senbouhashi

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2372,6 +2372,8 @@
           </p>
           <p>※代名詞は「<ruby>私<rt>わたくし</rt></ruby>」である。</p>
           <br>
+          <a href="./gallery/spalmea/Miiya_Senbouhashi.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- ジークヒルデ・シュタインホイッサー（Sieghilde Steinhäußer） -->
         <section>
