Added art gallery for Sieghilde Steinhäußer

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2411,6 +2411,8 @@
           </p>
           <p>家族：</p>
           <br>
+          <a href="./gallery/spalmea/Sieghilde_Steinhäußer.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- ミーノース・タヴラリアデース（Minos Tavoulariades） -->
         <section>
