--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2451,6 +2451,8 @@
           <p>家族：</p>
           <p>※ギリシャ文字に「<span lang="el" class="font-greek">Μίνως Ταβουλαρίαδης</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Mínōs Taboularíadēs</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Minos_Tavoulariades.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- アーサー・トールボーン（Arthur Thorebourne） -->
         <section>
