Added art gallery for Arthur Thorebourne

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -2490,6 +2490,8 @@
           </p>
           <p>家族：</p>
           <br>
+          <a href="./gallery/spalmea/Arthur_Thorebourne.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
       </article>
       <!-- 始まりに戻る（Return to Top） -->
