Updated character art pointer for 'Ayn

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -383,7 +383,7 @@
                 <br>
               </div>
               <div id="AynArt" class="art-chara">
-                <img class="art" src="../img/art/Ayn.png" alt="アイン">
+                <img class="art" src="../img/art/アイン.png" alt="アイン">
                 <p class="caption">アイン</p>
               </div>
               <p>
