Fixed filepath for Cuowu's character art

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -490,7 +490,7 @@
                 <br>
               </div>
               <div id="CuowuArt" class="art-chara">
-                <img class="art" src="../img/錯誤.png" alt="錯誤">
+                <img class="art" src="../img/art/錯誤.png" alt="錯誤">
                 <p class="caption">錯誤</p>
               </div>
               <p>
