--- a/html/gallery/nizi/Cuòwù.html
+++ b/html/gallery/nizi/Cuòwù.html
@@ -57,6 +57,22 @@
         <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
         <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
         <div class="flex-gallery" id="Flexbox 【美術品】">
+          <div class="art-gallery" id="システム：錯誤（錯誤）">
+            <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（錯誤）.png" alt="システム：錯誤（錯誤）">
+            <p class="caption"></p>
+          </div>
+          <div class="art-gallery" id="">
+            <img class="gallery-art" src="../../../img/gallery/Cuòwù/" alt="">
+            <p class="caption"></p>
+          </div>
+          <div class="art-gallery" id="">
+            <img class="gallery-art" src="../../../img/gallery/Cuòwù/" alt="">
+            <p class="caption"></p>
+          </div>
+          <div class="art-gallery" id="">
+            <img class="gallery-art" src="../../../img/gallery/Cuòwù/" alt="">
+            <p class="caption"></p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
