Added art "システム：錯誤（新星）"

--- a/html/gallery/nizi/Cuòwù.html
+++ b/html/gallery/nizi/Cuòwù.html
@@ -61,8 +61,8 @@
             <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（錯誤）.png" alt="システム：錯誤（錯誤）">
             <p class="caption"></p>
           </div>
-          <div class="art-gallery" id="">
-            <img class="gallery-art" src="../../../img/gallery/Cuòwù/" alt="">
+          <div class="art-gallery" id="システム：錯誤（新星）">
+            <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（新星）.png" alt="システム：錯誤（新星）">
             <p class="caption"></p>
           </div>
           <div class="art-gallery" id="">
