Added art "システム：錯誤（タモードヴァーラム）"

--- a/html/gallery/nizi/Cuòwù.html
+++ b/html/gallery/nizi/Cuòwù.html
@@ -65,9 +65,9 @@
             <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（新星）.png" alt="システム：錯誤（新星）">
             <p class="caption"></p>
           </div>
-          <div class="art-gallery" id="">
-            <img class="gallery-art" src="../../../img/gallery/Cuòwù/" alt="">
-            <p class="caption"></p>
+          <div class="art-gallery" id="システム：錯誤（タモードヴァーラム）">
+            <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（タモードヴァーラム）.png" alt="システム：錯誤（タモードヴァーラム）">
+            <p class="caption">システム：錯誤（タモードヴァーラム）</p>
           </div>
           <div class="art-gallery" id="">
             <img class="gallery-art" src="../../../img/gallery/Cuòwù/" alt="">
