Added caption for "システム：錯誤（新星）"

--- a/html/gallery/nizi/Cuòwù.html
+++ b/html/gallery/nizi/Cuòwù.html
@@ -63,7 +63,7 @@
           </div>
           <div class="art-gallery" id="システム：錯誤（新星）">
             <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（新星）.png" alt="システム：錯誤（新星）">
-            <p class="caption"></p>
+            <p class="caption">システム：錯誤（新星）</p>
           </div>
           <div class="art-gallery" id="システム：錯誤（タモードヴァーラム）">
             <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（タモードヴァーラム）.png" alt="システム：錯誤（タモードヴァーラム）">
