Added caption for システム：錯誤（錯誤）

--- a/html/gallery/nizi/Cuòwù.html
+++ b/html/gallery/nizi/Cuòwù.html
@@ -59,7 +59,7 @@
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="システム：錯誤（錯誤）">
             <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（錯誤）.png" alt="システム：錯誤（錯誤）">
-            <p class="caption"></p>
+            <p class="caption">システム：錯誤（錯誤）</p>
           </div>
           <div class="art-gallery" id="システム：錯誤（新星）">
             <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（新星）.png" alt="システム：錯誤（新星）">
