Added art "システム：錯誤（佰萬）"

--- a/html/gallery/nizi/Cuòwù.html
+++ b/html/gallery/nizi/Cuòwù.html
@@ -69,9 +69,9 @@
             <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（タモードヴァーラム）.png" alt="システム：錯誤（タモードヴァーラム）">
             <p class="caption">システム：錯誤（タモードヴァーラム）</p>
           </div>
-          <div class="art-gallery" id="">
-            <img class="gallery-art" src="../../../img/gallery/Cuòwù/" alt="">
-            <p class="caption"></p>
+          <div class="art-gallery" id="システム：錯誤（佰萬）">
+            <img class="gallery-art" src="../../../img/gallery/Cuòwù/システム：錯誤（佰萬）.png" alt="システム：錯誤（佰萬）">
+            <p class="caption">システム：錯誤（佰萬）</p>
           </div>
         </div>
       </section>
