Added art gallery for Jimena Ligüerre y Ordóñez

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -5875,6 +5875,8 @@
               <p>ウーパールーパーの里で住むウーパールーパーの妖怪である。ミレヤとマリアの彼女であり、ライアとサライの母親であり、宇志江学校の水泳教師である。</p>
               <p>彼女は有意義な時間のために水の外にいる事ができないので、ヒメナは学校のプールで時間のほとんどを費やす。しかし、他の皆と同じようにトイレを使用している。（ヒメナの種族にはできない事。）</p>
               <br>
+              <a href="./gallery/ushie/Jimena_Ligüerre_y_Ordóñez.html" target="topframe">美術館へ行きますか？</a>
+              <br>
             </div>
           </section>
           <!-- ホゼ・オカニャ・イ・アビラ（José Ocaña y Ávila） -->
