Added art gallery for Kaoru Inugami

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -953,6 +953,8 @@
               <p>時々犬の真似をして、犬のように吠える。</p>
               <p>※書いた代名詞は「あたい」である。</p>
               <br>
+              <a href="./gallery/ushie/Kaoru_Inugami.html" target="topframe">美術館へ行きますか？</a>
+              <br>
             </div>
           </section>
           <!-- 犬上茂和（Shigekazu Inugami） -->
