Added art gallery for Okimi Shinogawa

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -2738,6 +2738,8 @@
               </p>
               <p>※代名詞は「あたし」である。</p>
               <br>
+              <a href="./gallery/ushie/Okimi_Shinogawa.html" target="topframe">美術館へ行きますか？</a>
+              <br>
             </div>
           </section>
           <!-- 笹川治虫偽尊（Shinogawa-no-Osamu-no-Nise-Mikoto） -->
