Added art gallery for Zhāng Língxín

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -3547,6 +3547,8 @@
               </p>
               <p>※代名詞は「ボク」だとたまたまに「<ruby>我<rt>ウォ</rt></ruby>」である。ピンインに「<span lang="zh-Latn" class="font-latin">Zhāng Língxín</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Chang<sup>1</sup> Ling<sup>2</sup>-hsin<sup>2</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Jang Lingshyn</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">張靈尋</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">张灵寻</span>」で書く。</p>
               <br>
+              <a href="./gallery/ushie/Zhāng_Língxín.html" target="topframe">美術館へ行きますか？</a>
+              <br>
             </div>
           </section>
         </div>
