Added art "張靈尋（Zhang Lingxin） 【O_O】"

--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -67,6 +67,10 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【経鼻胃管】</p>
             </div>
           </div>
+          <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【O_O】">
+            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【O_O】.png" alt="張靈尋（Zhang Lingxin） 【O_O】">
+            <p class="caption">張靈尋（Zhang Lingxin） 【O_O】</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
