--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -71,6 +71,12 @@
             <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【O_O】.png" alt="張靈尋（Zhang Lingxin） 【O_O】">
             <p class="caption">張靈尋（Zhang Lingxin） 【O_O】</p>
           </div>
+          <div id="nsfw1">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【心電図】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【心電図】.png" alt="張靈尋（Zhang Lingxin） 【心電図】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【心電図】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
