Added art "張靈尋（Zhang Lingxin） 【閉じた目】"

--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -77,6 +77,10 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【心電図】</p>
             </div>
           </div>
+          <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【閉じた目】">
+            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【閉じた目】.png" alt="張靈尋（Zhang Lingxin） 【閉じた目】">
+            <p class="caption">張靈尋（Zhang Lingxin） 【閉じた目】</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
