--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -81,6 +81,10 @@
             <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【閉じた目】.png" alt="張靈尋（Zhang Lingxin） 【閉じた目】">
             <p class="caption">張靈尋（Zhang Lingxin） 【閉じた目】</p>
           </div>
+          <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【閉じた目；-_-】">
+            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【閉じた目；-_-】.png" alt="張靈尋（Zhang Lingxin） 【閉じた目；-_-】">
+            <p class="caption">張靈尋（Zhang Lingxin） 【閉じた目；-_-】</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
