--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -85,6 +85,12 @@
             <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【閉じた目；-_-】.png" alt="張靈尋（Zhang Lingxin） 【閉じた目；-_-】">
             <p class="caption">張靈尋（Zhang Lingxin） 【閉じた目；-_-】</p>
           </div>
+          <div id="nsfw2">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】.png" alt="張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】">
+              <p class="caption">張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
