--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -91,6 +91,12 @@
               <p class="caption">張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】</p>
             </div>
           </div>
+          <div id="nsfw3">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】.png" alt="張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】">
+              <p class="caption">張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
