Changed file pointers to use a shorter filename

--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -58,42 +58,42 @@
         <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="張靈尋（Zhang Lingxin）">
-            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin）.png" alt="張靈尋（Zhang Lingxin）">
+            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_0.png" alt="張靈尋（Zhang Lingxin）">
             <p class="caption">張靈尋（Zhang Lingxin）</p>
           </div>
           <div id="nsfw0">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【経鼻胃管】">
-              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【経鼻胃管】.png" alt="張靈尋（Zhang Lingxin） 【経鼻胃管】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_1.png" alt="張靈尋（Zhang Lingxin） 【経鼻胃管】">
               <p class="caption">張靈尋（Zhang Lingxin） 【経鼻胃管】</p>
             </div>
           </div>
           <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【O_O】">
-            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【O_O】.png" alt="張靈尋（Zhang Lingxin） 【O_O】">
+            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_2.png" alt="張靈尋（Zhang Lingxin） 【O_O】">
             <p class="caption">張靈尋（Zhang Lingxin） 【O_O】</p>
           </div>
           <div id="nsfw1">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【心電図】">
-              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【心電図】.png" alt="張靈尋（Zhang Lingxin） 【心電図】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_3.png" alt="張靈尋（Zhang Lingxin） 【心電図】">
               <p class="caption">張靈尋（Zhang Lingxin） 【心電図】</p>
             </div>
           </div>
           <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【閉じた目】">
-            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【閉じた目】.png" alt="張靈尋（Zhang Lingxin） 【閉じた目】">
+            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_4.png" alt="張靈尋（Zhang Lingxin） 【閉じた目】">
             <p class="caption">張靈尋（Zhang Lingxin） 【閉じた目】</p>
           </div>
           <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【閉じた目；-_-】">
-            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin） 【閉じた目；-_-】.png" alt="張靈尋（Zhang Lingxin） 【閉じた目；-_-】">
+            <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_5.png" alt="張靈尋（Zhang Lingxin） 【閉じた目；-_-】">
             <p class="caption">張靈尋（Zhang Lingxin） 【閉じた目；-_-】</p>
           </div>
           <div id="nsfw2">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】">
-              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】.png" alt="張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_6.png" alt="張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】">
               <p class="caption">張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】</p>
             </div>
           </div>
           <div id="nsfw3">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】">
-              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】.png" alt="張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_7.png" alt="張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】">
               <p class="caption">張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】</p>
             </div>
           </div>
