Added art "張靈尋（Zhang Lingxin） 【酸素マスク】"

--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -97,6 +97,12 @@
               <p class="caption">張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】</p>
             </div>
           </div>
+          <div id="nsfw4">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【酸素マスク】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_8.png" alt="張靈尋（Zhang Lingxin） 【酸素マスク】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
