--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -109,6 +109,12 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；O_O】</p>
             </div>
           </div>
+          <div id="nsfw6">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_10.png" alt="張靈尋（Zhang Lingxin） 【気管挿管】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
