--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -115,6 +115,12 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管】</p>
             </div>
           </div>
+          <div id="nsfw7">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；閉じた目】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_11.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；閉じた目】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；閉じた目】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
