Added art "張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（水平）】"

--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -121,6 +121,12 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；閉じた目】</p>
             </div>
           </div>
+          <div id="nsfw8">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（水平）】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_12.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（水平）】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（水平）】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
