--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -133,6 +133,12 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（上下）】</p>
             </div>
           </div>
+          <div id="nsfw10">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；心電図】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_14.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；心電図】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；心電図】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
