Added art "張靈尋（Zhang Lingxin） 【酸素マスク；心電図】"

--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -145,6 +145,12 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；心電図；閉じた目】</p>
             </div>
           </div>
+          <div id="nsfw12">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【酸素マスク；心電図】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_16.png" alt="張靈尋（Zhang Lingxin） 【酸素マスク；心電図】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；心電図】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
