Added art "張靈尋（Zhang Lingxin） 【酸素マスク；心電図；O_O】"

--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -151,6 +151,12 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；心電図】</p>
             </div>
           </div>
+          <div id="nsfw13">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【酸素マスク；心電図；O_O】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_17.png" alt="張靈尋（Zhang Lingxin） 【酸素マスク；心電図；O_O】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；心電図；O_O】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
