Added art "張靈尋（Zhang Lingxin） 【酸素マスク；心電図；-_-；テープして閉じた目（水平）】"

--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -157,6 +157,12 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；心電図；O_O】</p>
             </div>
           </div>
+          <div id="nsfw14">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【酸素マスク；心電図；-_-；テープして閉じた目（水平）】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_18.png" alt="張靈尋（Zhang Lingxin） 【酸素マスク；心電図；-_-；テープして閉じた目（水平）】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；心電図；-_-；テープして閉じた目（水平）】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
