--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -169,6 +169,12 @@
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；テープして閉じた目（水平）】</p>
             </div>
           </div>
+          <div id="nsfw16">
+            <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；心静止；テープして閉じた目（水平）】">
+              <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_20.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；心静止；テープして閉じた目（水平）】">
+              <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；心静止；テープして閉じた目（水平）】</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
