Added art gallery for Shino Sakurasame

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -2206,6 +2206,8 @@
               </p>
               <p>家族：</p>
               <br>
+              <a href="./gallery/ushie/Shino_Sakurasame.html" target="topframe">美術館へ行きますか？</a>
+              <br>
             </div>
           </section>
           <!-- 桜崎ふみゑ（Fumie Sakurazaki） -->
