Cleaned up the CSS file some & fixed up some of the styles :3

--- a/html/gallery/nizi/Kishihime_Nuwesaka.html
+++ b/html/gallery/nizi/Kishihime_Nuwesaka.html
@@ -58,7 +58,7 @@
         <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="ぬゑさか岸姫（スク水）">
-            <img class="gallery-art" src="../../../img/gallery/Kishihime_Nuwesaka/ぬゑさか岸姫（スク水）.png" alt="ぬゑさか岸姫（スク水）">
+            <img class="gallery-art-alt" src="../../../img/gallery/Kishihime_Nuwesaka/ぬゑさか岸姫（スク水）.png" alt="ぬゑさか岸姫（スク水）">
             <p class="caption">ぬゑさか岸姫（スク水）</p>
           </div>
         </div>
