--- a/html/gallery/nizi/Youko.html
+++ b/html/gallery/nizi/Youko.html
@@ -47,7 +47,7 @@
         <h2 class="art-heading">レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【レファレンス】">
           <div class="art-ref" id="妖狐のレファレンス">
-            <img class="gallery-art" src="../../../img/ref/Youko.png" alt="妖狐のレファレンス">
+            <img class="reference-art-alt" src="../../../img/ref/Youko.png" alt="妖狐のレファレンス">
           </div>
         </div>
       </section>
