--- a/html/gallery/nizi/ʿAyn.html
+++ b/html/gallery/nizi/ʿAyn.html
@@ -47,7 +47,7 @@
         <h2 class="art-heading">レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【レファレンス】">
           <div class="art-ref" id="アインのレファレンス">
-            <img class="gallery-art" src="../../../img/ref/ʿAyn.jpg" alt="アインのレファレンス">
+            <img class="reference-art-alt" src="../../../img/ref/ʿAyn.jpg" alt="アインのレファレンス">
           </div>
         </div>
       </section>
