Imported kableustein.css

--- a/html/kableustein.html
+++ b/html/kableustein.html
@@ -27,6 +27,7 @@
     <title>造化神録　キャブロイシュタイン王国</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/kableustein.css">
     <!-- Scripts -->
     <script src="../js/kableustein.js"></script>
   </head>
