Added button to toggle all content

--- a/html/kableustein.html
+++ b/html/kableustein.html
@@ -42,6 +42,7 @@
     <main>
       <!-- キャブロイシュタイン王国（Kingdom of Kableustein） -->
       <h1 id="Kingdom_of_Kableustein">キャブロイシュタイン王国</h1><hr>
+      <button type="button" onclick="toggleAll()">全てをトグルする</button>
       <!-- キャブロイシュタイン町（Kableustein Town｜Kableustein Städtchen） -->
       <article>
         <h2 id="Kableustein_Town">キャブロイシュタイン町</h2>
