--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -44,41 +44,44 @@
       <h1 id="Hikigahara_Forest">日木ヶ原の森</h1><hr>
       <!-- 朴茶々丸（Chachamaru Paku） -->
       <section>
-        <h4 id="Chachamaru_Paku">朴茶々丸</h4>
-        <div class="pride">
-          <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-          <p class="pronouns">代名詞：</p>
-          <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
-          <br>
+        <button class="accordion">朴茶々丸</button>
+        <div class="panel">
+          <h4 id="Chachamaru_Paku">朴茶々丸</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="朴茶々丸">
+            <p class="caption">茶々丸</p>
+          </div>
+          <p>希望を破る森のジーディヤオ</p>
+          <p>
+            朴　茶々丸（ぱく　ちゃちゃまる）<br>
+            Paku Chachamaru
+          </p>
+          <p>
+            種族：ドラゴンの女神<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+          <p>※代名詞は「<ruby>我<rt>われ</rt></ruby>」である。</p>
         </div>
-        <div class="art-chara">
-          <img class="art" src="../img/fill.png" alt="朴茶々丸">
-          <p class="caption">茶々丸</p>
-        </div>
-        <p>希望を破る森のジーディヤオ</p>
-        <p>
-          朴　茶々丸（ぱく　ちゃちゃまる）<br>
-          Paku Chachamaru
-        </p>
-        <p>
-          種族：ドラゴンの女神<br>
-          能力：
-        </p>
-        <p>
-          性別：<br>
-          性自認：<br>
-          代名詞：<br>
-          雌雄性：
-        </p>
-        <p>
-          誕生日：<br>
-          年齢：
-        </p>
-        <p>家族：</p>
-        <p>※代名詞は「<ruby>我<rt>われ</rt></ruby>」である。</p>
       </section>
       <!-- 始まりに戻る（Return to Top） -->
       <br>
@@ -89,5 +92,6 @@
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
+    <script src="../js/accordion.js"></script>
   </body>
 </html>
