Added Laia's gender and pronouns

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -6019,10 +6019,10 @@
             <div id="LaiaPiedrabuenaLiguerre">
               <div class="pride">
                 <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-                <p class="pronouns">代名詞：</p>
-                <!-- Pride template / Pride flag placeholder :3 -->
-                <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                  <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+                <p class="pronouns">代名詞：she/xe</p>
+                <!-- パステルジェンダー（Pastelgender） -->
+                <a href="https://mogai-genders.fandom.com/wiki/Pastelgender" title="パステルジェンダー" target="_blank">
+                  <img class="pride-flag" src="../img/pride/xeno/Pastelgender.png" alt="パステルジェンダー" title="パステルジェンダー（Pastelgender）">
                 </a>
                 <br>
               </div>
@@ -6040,8 +6040,8 @@
               </p>
               <p>
                 性別：<br>
-                性自認：<br>
-                代名詞：<br>
+                性自認：パステルジェンダー<br>
+                代名詞：彼女／<ruby>奴<rt>ジー</rt></ruby>（she/xe）<br>
                 雌雄性：
               </p>
               <p>
