Added Lilac's gender, pronouns, and species

--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -48,10 +48,10 @@
         <h4 id="Lilac_Blatherwick">ライラック・ブラザーウィック</h4>
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-          <p class="pronouns">代名詞：</p>
-          <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+          <p class="pronouns">代名詞：she/com</p>
+          <!-- アストラムジェンダー（Astrumgender） -->
+          <a href="https://www.tumblr.com/angelknivesmogai/621553347233710080/astrumgender" title="アストラムジェンダー" target="_blank">
+            <img class="pride-flag" src="../img/pride/xeno/Astrumgender.png" alt="アストラムジェンダー" title="アストラムジェンダー（Astrumgender）">
           </a>
           <br>
         </div>
@@ -65,13 +65,13 @@
           Lilac Blatherwick
         </p>
         <p>
-          種族：魔法使い<br>
+          種族：魔法使いとネピリムのハーフ<br>
           能力：宇宙操作の能力
         </p>
         <p>
           性別：<br>
-          性自認：<br>
-          代名詞：<br>
+          性自認：アストラムジェンダー<br>
+          代名詞：彼女／<ruby>奴<rt>コム</rt></ruby>（she/com）　（※）<br>
           雌雄性：
         </p>
         <p>
@@ -94,7 +94,10 @@
           光死「ガンマ線バースト -GRB-」<br>
           最後星「スーパーノヴァ・トゥ・アシタ」
         </p>
-        <p>※代名詞は「あたい」である。</p>
+        <p>
+          ※代名詞は「あたい」である。<br>
+          　『com』使用のたとえば：「<span class="oblique">Com</span> is talking with <span class="oblique">cometself</span> about <span class="oblique">comets</span> day.」
+</p>
       </section>
       <!--ハービー・チャッドボーン（Harvey Chadbourne）  -->
       <section>
