Made the example sentence of the usage of the neopronoun "com" better

--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -96,7 +96,7 @@
         </p>
         <p>
           ※代名詞は「あたい」である。<br>
-          　『com』使用のたとえば：「<span class="oblique">Com</span> is talking with <span class="oblique">cometself</span> about <span class="oblique">comets</span> day.」
+          　『com』使用のたとえば：「<span class="oblique">Com</span> is talking with <span class="oblique">cometself</span> about <span class="oblique">comets</span> day. But who is answering <span class="oblique">comet</span>, though?」
         </p>
       </section>
       <!--ハービー・チャッドボーン（Harvey Chadbourne）  -->
