Fixed xenogender section

--- a/html/pride.html
+++ b/html/pride.html
@@ -1883,37 +1883,37 @@
           <br>
         </div>
       </section>
-      <!--  -->
+      <!-- ゼノジェンダー（Xenogender） -->
       <section>
-      <button class="accordion">ゼノジェンダー</button>
-      <div class="panel">
-        <h1 id="Xenogender">ゼノジェンダー</h1><hr>
-        <div class="pride-color">
-          <p>
-            <span style="">Placeholder text</span><br>
-            <span style="">:3</span>
-          </p>
-        </div>
-        <div class="pride-display">
-          <div class="container">
-            <a href="https://lgbtqia.fandom.com/wiki/Xenogender" title="ゼノジェンダー" target="_blank">
-              <img class="pride-flag image" src="../img/pride/Xenogender.png" alt="ゼノジェンダー" title="ゼノジェンダー（Xenogender）">
-            </a>
-            <div class="middle">
-              <div class="text">
-                ゼノジェンダー
+        <button class="accordion">ゼノジェンダー</button>
+        <div class="panel">
+          <h1 id="Xenogender">ゼノジェンダー</h1><hr>
+          <div class="pride-color">
+            <p>
+              <span style="">Placeholder text</span><br>
+              <span style="">:3</span>
+            </p>
+          </div>
+          <div class="pride-display">
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/Xenogender" title="ゼノジェンダー" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Xenogender.png" alt="ゼノジェンダー" title="ゼノジェンダー（Xenogender）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  ゼノジェンダー
+                </div>
               </div>
             </div>
           </div>
+          <p class="p-space">
+            日本語：ゼノジェンダー<br>
+            English: Xenogender
+          </p>
+          <br>
+          <br>
+          <br>
         </div>
-        <p class="p-space">
-          日本語：ゼノジェンダー<br>
-          English: Xenogender
-        </p>
-        <br>
-        <br>
-        <br>
-      </div>
       </section>
       <!-- 始まりに戻る（Return to Top） -->
       <br>
