Added the section for listing the various xenogenders

--- a/html/pride.html
+++ b/html/pride.html
@@ -1915,6 +1915,12 @@
           <br>
         </div>
       </section>
+      <!-- ゼノジェンダーをリストしている（List of Xenogenders (that I'm aware / have the flag(s) for)） -->
+      <article>
+        <button class="accordion">ゼノジェンダーをリストしている</button>
+        <div class="panel">
+        </div>
+      </article>
       <!-- 始まりに戻る（Return to Top） -->
       <br>
       <a href="#top">始まりに戻る</a>
