Added section for other prides :3

--- a/html/pride.html
+++ b/html/pride.html
@@ -1921,6 +1921,12 @@
         <div class="panel">
         </div>
       </article>
+      <!-- 他のプライド :3（Other prides! :3） -->
+      <article>
+        <button class="accordion">他のプライド :3</button>
+        <div class="panel">
+        </div>
+      </article>
       <!-- 始まりに戻る（Return to Top） -->
       <br>
       <a href="#top">始まりに戻る</a>
