Added section for controversial prides

--- a/html/pride.html
+++ b/html/pride.html
@@ -1927,6 +1927,12 @@
         <div class="panel">
         </div>
       </article>
+      <!-- 議論になるプライド（Controversial） -->
+      <article>
+        <button class="accordion">議論になるプライド</button>
+        <div class="panel">
+        </div>
+      </article>
       <!-- 始まりに戻る（Return to Top） -->
       <br>
       <a href="#top">始まりに戻る</a>
