Added section "Lovegender"

--- a/html/pride.html
+++ b/html/pride.html
@@ -1991,6 +1991,38 @@
               <br>
             </div>
           </section>
+          <!-- ラブジェンダー（Lovegender） -->
+          <section>
+            <button class="accordion">ラブジェンダー</button>
+            <div class="panel">
+              <h2 id="Lovegender">ラブジェンダー</h2><hr>
+              <div class="pride-color">
+                <p>
+                  <span style="">Placeholder text</span><br>
+                  <span style="">:3</span>
+                </p>
+              </div>
+              <div class="pride-display">
+                <div class="container">
+                  <a href="https://mogai-genders.fandom.com/wiki/Lovegender" title="ラブジェンダー" target="_blank">
+                    <img class="pride-flag image" src="../img/pride/xeno/Lovegender.png" alt="ラブジェンダー" title="ラブジェンダー（Lovegender）">
+                  </a>
+                  <div class="middle">
+                    <div class="text">
+                      ラブジェンダー
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <p class="p-space">
+                日本語：ラブジェンダー<br>
+                English: Lovegender
+              </p>
+              <br>
+              <br>
+              <br>
+            </div>
+          </section>
         </div>
       </article>
       <!-- 他のプライド :3（Other prides! :3） -->
