Added section "Moongender"

--- a/html/pride.html
+++ b/html/pride.html
@@ -2023,6 +2023,38 @@
               <br>
             </div>
           </section>
+          <!-- ムーンジェンダー（Moongender） -->
+          <section>
+            <button class="accordion">ムーンジェンダー</button>
+            <div class="panel">
+              <h2 id="Moongender">ムーンジェンダー</h2><hr>
+              <div class="pride-color">
+                <p>
+                  <span style="">Placeholder text</span><br>
+                  <span style="">:3</span>
+                </p>
+              </div>
+              <div class="pride-display">
+                <div class="container">
+                  <a href="https://www.tumblr.com/angelknivesmogai/621553347233710080/astrumgender" title="ムーンジェンダー" target="_blank">
+                    <img class="pride-flag image" src="../img/pride/xeno/Moongender.png" alt="ムーンジェンダー" title="ムーンジェンダー（Moongender）">
+                  </a>
+                  <div class="middle">
+                    <div class="text">
+                      ムーンジェンダー
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <p class="p-space">
+                日本語：ラブジェンダー<br>
+                English: Moongender
+              </p>
+              <br>
+              <br>
+              <br>
+            </div>
+          </section>
         </div>
       </article>
       <!-- 他のプライド :3（Other prides! :3） -->
