Added section "Pastelgender"

--- a/html/pride.html
+++ b/html/pride.html
@@ -2055,6 +2055,38 @@
               <br>
             </div>
           </section>
+          <!-- パステルジェンダー（Pastelgender） -->
+          <section>
+            <button class="accordion">パステルジェンダー</button>
+            <div class="panel">
+              <h2 id="Pastelgender">パステルジェンダー</h2><hr>
+              <div class="pride-color">
+                <p>
+                  <span style="">Placeholder text</span><br>
+                  <span style="">:3</span>
+                </p>
+              </div>
+              <div class="pride-display">
+                <div class="container">
+                  <a href="https://mogai-genders.fandom.com/wiki/Pastelgender" title="パステルジェンダー" target="_blank">
+                    <img class="pride-flag image" src="../img/pride/xeno/Pastelgender.png" alt="パステルジェンダー" title="パステルジェンダー（Pastelgender）">
+                  </a>
+                  <div class="middle">
+                    <div class="text">
+                      パステルジェンダー
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <p class="p-space">
+                日本語：パステルジェンダー<br>
+                English: Pastelgender
+              </p>
+              <br>
+              <br>
+              <br>
+            </div>
+          </section>
         </div>
       </article>
       <!-- 他のプライド :3（Other prides! :3） -->
