--- a/html/pride.html
+++ b/html/pride.html
@@ -2047,7 +2047,7 @@
                 </div>
               </div>
               <p class="p-space">
-                日本語：ラブジェンダー<br>
+                日本語：ムーンジェンダー<br>
                 English: Moongender
               </p>
               <br>
